logo size change for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -644,3 +644,8 @@ html {
 .nav-toggle:focus-visible {
   outline: none;
 }
+@media (max-width: 768px) {
+  .nav-brand {
+    padding-right: 3rem;
+  }
+}
